--- a/src/coinone.sample.c11/coinone.sample.c11.csproj
+++ b/src/coinone.sample.c11/coinone.sample.c11.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Bithumb.Sample</AssemblyName>
     <RootNamespace>Bithumb.Sample</RootNamespace>
   </PropertyGroup>
